# HQ

first_at_HQ/mel/: All_mel_net_test.mel  Check_File_Textures.mel  ReadMe (2).txt  SC8.bat  Thumbs (2).db  YY_setup.mel  Zeebra_DepthModRenderTool.mel  a_li.mb  address (2).mel  address.mel  cam.mb  ch1.mel  linking===+.txt  改贴图工具.mel
last_at_HQ/hq_toolbox/: hq_environment.txt
last_at_HQ/hq_toolbox/hq_icons/houdini_icons/: CMakeLists.txt  IconMapping  Makefile  generate_file_list.sh  svg_file_list.cmake
last_at_HQ/hq_toolbox/hq_icons/houdini_icons/archivemaker/: CMakeLists.txt  Makedepend  archivemaker.C
last_at_HQ/k_check/: k_check.py  k_checkOutSideFile.py  k_checkOutSideFile_disc.py  k_check_disc.py  k_confi_mayapy.py  k_editOutsidePath.py  k_editOutsidePath_disc.py  k_presetBuilder.py
last_at_HQ/normal/: foma_plugins.mod  initialmaya.py  k_celianggongju.py  代理设置工具.mel  参考路径批量修改工具.mel  随机选择工具.mel
last_at_HQ/weimeng/: CheckServer.py  k_check.py  k_check0.7.py  k_check0.8.py  k_check0.9.py  k_checkVRmeshfiles.py  k_checkVRmeshfiles10.py  k_checkVRmeshfiles11.py  k_checkVRmeshfiles12.py  k_checkVRmeshfiles16.py  k_checkVRmeshfiles17.py  k_checkVRmeshfiles18.py  k_checkVRmeshfiles2.py  k_checkVRmeshfiles23.py  k_checkVRmeshfiles24.py  k_checkVRmeshfiles25.py  k_checkVRmeshfiles27.py  k_checkVRmeshfiles3.py  k_checkVRmeshfiles4.py  k_checkVRmeshfiles5.py  k_checkVRmeshfiles6.py  k_checkVRmeshfiles7.py  k_checkVRmeshfiles8.py  k_checkVRmeshfiles9.py  k_eMayaPath.py  k_eOutsidePath.py  k_eOutsidePath2.py  k_editOutsidefiles.py  k_enable.json  k_enable_builder.py  (+5 more)
(+1114 files in other folders)
